@@ -2,6 +2,8 @@ Revision history for OpenTelemetry-SDK
 
 {{$NEXT}}
 
+    * Handle more error classes in span's 'record_exception'
+
 0.013     2023-11-07 20:27:16+00:00 Europe/London
 
     * Document remaining OTLP exporter environment variables
